--- a/spec/vcr_cassettes/CreatesSubscriptionViaStripe/happy_path/creates_a_customer.yml
+++ b/spec/vcr_cassettes/CreatesSubscriptionViaStripe/happy_path/creates_a_customer.yml
@@ -8,13 +8,13 @@ http_interactions:
       string: email=test%40example.com
     headers:
       User-Agent:
-      - Stripe/v1 RubyBindings/3.9.2
+      - Stripe/v1 RubyBindings/3.11.0
       Authorization:
       - Bearer sk_test_JYrSngeaB6dFnfYWEII1vZaD
       Content-Type:
       - application/x-www-form-urlencoded
       X-Stripe-Client-User-Agent:
-      - '{"bindings_version":"3.9.2","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
+      - '{"bindings_version":"3.11.0","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
         MacBook-Pro-Alexander.local 17.4.0 Darwin Kernel Version 17.4.0: Sun Dec 17
         09:19:54 PST 2017; root:xnu-4570.41.2~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
       Accept-Encoding:
@@ -29,7 +29,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Thu, 15 Mar 2018 15:01:20 GMT
+      - Sun, 01 Apr 2018 22:39:55 GMT
       Content-Type:
       - application/json
       Content-Length:
@@ -49,7 +49,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_SWjV69Pq9IFFVP
+      - req_scSaFJOs5Lmlbw
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -58,17 +58,17 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "cus_CUxVsPAoHAcOfA",
+          "id": "cus_CbRjTFs4r0StLR",
           "object": "customer",
           "account_balance": 0,
-          "created": 1521126080,
+          "created": 1522622395,
           "currency": null,
           "default_source": null,
           "delinquent": false,
           "description": null,
           "discount": null,
           "email": "test@example.com",
-          "invoice_prefix": "4A0C972",
+          "invoice_prefix": "711B7ED",
           "livemode": false,
           "metadata": {},
           "shipping": null,
@@ -77,18 +77,18 @@ http_interactions:
             "data": [],
             "has_more": false,
             "total_count": 0,
-            "url": "/v1/customers/cus_CUxVsPAoHAcOfA/sources"
+            "url": "/v1/customers/cus_CbRjTFs4r0StLR/sources"
           },
           "subscriptions": {
             "object": "list",
             "data": [],
             "has_more": false,
             "total_count": 0,
-            "url": "/v1/customers/cus_CUxVsPAoHAcOfA/subscriptions"
+            "url": "/v1/customers/cus_CbRjTFs4r0StLR/subscriptions"
           }
         }
     http_version: 
-  recorded_at: Thu, 15 Mar 2018 15:01:20 GMT
+  recorded_at: Sun, 01 Apr 2018 22:39:55 GMT
 - request:
     method: post
     uri: https://api.stripe.com/v1/tokens
@@ -97,13 +97,13 @@ http_interactions:
       string: card[number]=4242424242424242&card[exp_month]=12&card[exp_year]=2019&card[cvc]=123
     headers:
       User-Agent:
-      - Stripe/v1 RubyBindings/3.9.2
+      - Stripe/v1 RubyBindings/3.11.0
       Authorization:
       - Bearer sk_test_JYrSngeaB6dFnfYWEII1vZaD
       Content-Type:
       - application/x-www-form-urlencoded
       X-Stripe-Client-User-Agent:
-      - '{"bindings_version":"3.9.2","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
+      - '{"bindings_version":"3.11.0","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
         MacBook-Pro-Alexander.local 17.4.0 Darwin Kernel Version 17.4.0: Sun Dec 17
         09:19:54 PST 2017; root:xnu-4570.41.2~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
       Accept-Encoding:
@@ -118,11 +118,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Thu, 15 Mar 2018 15:01:21 GMT
+      - Sun, 01 Apr 2018 22:39:56 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '780'
+      - '779'
       Connection:
       - keep-alive
       Access-Control-Allow-Credentials:
@@ -138,7 +138,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_Bp2FyoLMX91HNH
+      - req_a14TZexoUzJqX5
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -147,10 +147,10 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "tok_1C5xa1G9Bw4keQMbpCUdGraE",
+          "id": "tok_1CCEq8G9Bw4keQMbJ8AVWrap",
           "object": "token",
           "card": {
-            "id": "card_1C5xa1G9Bw4keQMbcdoDMht4",
+            "id": "card_1CCEq8G9Bw4keQMb0TyZzbON",
             "object": "card",
             "address_city": null,
             "address_country": null,
@@ -173,29 +173,29 @@ http_interactions:
             "name": null,
             "tokenization_method": null
           },
-          "client_ip": "31.31.107.53",
-          "created": 1521126081,
+          "client_ip": "31.31.103.7",
+          "created": 1522622396,
           "livemode": false,
           "type": "card",
           "used": false
         }
     http_version: 
-  recorded_at: Thu, 15 Mar 2018 15:01:21 GMT
+  recorded_at: Sun, 01 Apr 2018 22:39:57 GMT
 - request:
     method: post
-    uri: https://api.stripe.com/v1/customers/cus_CUxVsPAoHAcOfA
+    uri: https://api.stripe.com/v1/customers/cus_CbRjTFs4r0StLR
     body:
       encoding: UTF-8
-      string: source=tok_1C5xa1G9Bw4keQMbpCUdGraE
+      string: source=tok_1CCEq8G9Bw4keQMbJ8AVWrap
     headers:
       User-Agent:
-      - Stripe/v1 RubyBindings/3.9.2
+      - Stripe/v1 RubyBindings/3.11.0
       Authorization:
       - Bearer sk_test_JYrSngeaB6dFnfYWEII1vZaD
       Content-Type:
       - application/x-www-form-urlencoded
       X-Stripe-Client-User-Agent:
-      - '{"bindings_version":"3.9.2","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
+      - '{"bindings_version":"3.11.0","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
         MacBook-Pro-Alexander.local 17.4.0 Darwin Kernel Version 17.4.0: Sun Dec 17
         09:19:54 PST 2017; root:xnu-4570.41.2~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
       Accept-Encoding:
@@ -210,7 +210,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Thu, 15 Mar 2018 15:01:23 GMT
+      - Sun, 01 Apr 2018 22:39:58 GMT
       Content-Type:
       - application/json
       Content-Length:
@@ -230,7 +230,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_mZyvOyOZ9fUbXo
+      - req_Df1BCAfezfsutG
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -239,17 +239,17 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "cus_CUxVsPAoHAcOfA",
+          "id": "cus_CbRjTFs4r0StLR",
           "object": "customer",
           "account_balance": 0,
-          "created": 1521126080,
+          "created": 1522622395,
           "currency": null,
-          "default_source": "card_1C5xa1G9Bw4keQMbcdoDMht4",
+          "default_source": "card_1CCEq8G9Bw4keQMb0TyZzbON",
           "delinquent": false,
           "description": null,
           "discount": null,
           "email": "test@example.com",
-          "invoice_prefix": "4A0C972",
+          "invoice_prefix": "711B7ED",
           "livemode": false,
           "metadata": {},
           "shipping": null,
@@ -257,7 +257,7 @@ http_interactions:
             "object": "list",
             "data": [
               {
-                "id": "card_1C5xa1G9Bw4keQMbcdoDMht4",
+                "id": "card_1CCEq8G9Bw4keQMb0TyZzbON",
                 "object": "card",
                 "address_city": null,
                 "address_country": null,
@@ -269,7 +269,7 @@ http_interactions:
                 "address_zip_check": null,
                 "brand": "Visa",
                 "country": "US",
-                "customer": "cus_CUxVsPAoHAcOfA",
+                "customer": "cus_CbRjTFs4r0StLR",
                 "cvc_check": "pass",
                 "dynamic_last4": null,
                 "exp_month": 12,
@@ -284,33 +284,33 @@ http_interactions:
             ],
             "has_more": false,
             "total_count": 1,
-            "url": "/v1/customers/cus_CUxVsPAoHAcOfA/sources"
+            "url": "/v1/customers/cus_CbRjTFs4r0StLR/sources"
           },
           "subscriptions": {
             "object": "list",
             "data": [],
             "has_more": false,
             "total_count": 0,
-            "url": "/v1/customers/cus_CUxVsPAoHAcOfA/subscriptions"
+            "url": "/v1/customers/cus_CbRjTFs4r0StLR/subscriptions"
           }
         }
     http_version: 
-  recorded_at: Thu, 15 Mar 2018 15:01:23 GMT
+  recorded_at: Sun, 01 Apr 2018 22:39:58 GMT
 - request:
     method: post
-    uri: https://api.stripe.com/v1/customers/cus_CUxVsPAoHAcOfA/subscriptions
+    uri: https://api.stripe.com/v1/customers/cus_CbRjTFs4r0StLR/subscriptions
     body:
       encoding: UTF-8
       string: plan=orchestra_monthly
     headers:
       User-Agent:
-      - Stripe/v1 RubyBindings/3.9.2
+      - Stripe/v1 RubyBindings/3.11.0
       Authorization:
       - Bearer sk_test_JYrSngeaB6dFnfYWEII1vZaD
       Content-Type:
       - application/x-www-form-urlencoded
       X-Stripe-Client-User-Agent:
-      - '{"bindings_version":"3.9.2","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
+      - '{"bindings_version":"3.11.0","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
         MacBook-Pro-Alexander.local 17.4.0 Darwin Kernel Version 17.4.0: Sun Dec 17
         09:19:54 PST 2017; root:xnu-4570.41.2~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
       Accept-Encoding:
@@ -325,11 +325,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Thu, 15 Mar 2018 15:01:25 GMT
+      - Sun, 01 Apr 2018 22:40:00 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '1745'
+      - '2047'
       Connection:
       - keep-alive
       Access-Control-Allow-Credentials:
@@ -345,7 +345,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_EvwvRVjYYuUnJt
+      - req_T9EUXfWLSGmrVM
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -354,17 +354,17 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "sub_CUxV2gxLzXH2wV",
+          "id": "sub_CbRjepLDuS2UFz",
           "object": "subscription",
           "application_fee_percent": null,
           "billing": "charge_automatically",
-          "billing_cycle_anchor": 1521126084,
+          "billing_cycle_anchor": 1522622399,
           "cancel_at_period_end": false,
           "canceled_at": null,
-          "created": 1521126084,
-          "current_period_end": 1523804484,
-          "current_period_start": 1521126084,
-          "customer": "cus_CUxVsPAoHAcOfA",
+          "created": 1522622399,
+          "current_period_end": 1525214399,
+          "current_period_start": 1522622399,
+          "customer": "cus_CbRjTFs4r0StLR",
           "days_until_due": null,
           "discount": null,
           "ended_at": null,
@@ -372,14 +372,15 @@ http_interactions:
             "object": "list",
             "data": [
               {
-                "id": "si_CUxVIxEntS9jCy",
+                "id": "si_CbRj8uWKjZtBCk",
                 "object": "subscription_item",
-                "created": 1521126084,
+                "created": 1522622400,
                 "metadata": {},
                 "plan": {
                   "id": "orchestra_monthly",
                   "object": "plan",
                   "amount": 10000,
+                  "billing_scheme": "per_unit",
                   "created": 1521125550,
                   "currency": "usd",
                   "interval": "month",
@@ -388,15 +389,19 @@ http_interactions:
                   "metadata": {},
                   "nickname": "Orchestra Monthly",
                   "product": "prod_CUxMHgqubz1jrn",
-                  "trial_period_days": null
+                  "tiers": null,
+                  "tiers_mode": null,
+                  "transform_usage": null,
+                  "trial_period_days": null,
+                  "usage_type": "licensed"
                 },
                 "quantity": 1,
-                "subscription": "sub_CUxV2gxLzXH2wV"
+                "subscription": "sub_CbRjepLDuS2UFz"
               }
             ],
             "has_more": false,
             "total_count": 1,
-            "url": "/v1/subscription_items?subscription=sub_CUxV2gxLzXH2wV"
+            "url": "/v1/subscription_items?subscription=sub_CbRjepLDuS2UFz"
           },
           "livemode": false,
           "metadata": {},
@@ -404,6 +409,7 @@ http_interactions:
             "id": "orchestra_monthly",
             "object": "plan",
             "amount": 10000,
+            "billing_scheme": "per_unit",
             "created": 1521125550,
             "currency": "usd",
             "interval": "month",
@@ -412,15 +418,19 @@ http_interactions:
             "metadata": {},
             "nickname": "Orchestra Monthly",
             "product": "prod_CUxMHgqubz1jrn",
-            "trial_period_days": null
+            "tiers": null,
+            "tiers_mode": null,
+            "transform_usage": null,
+            "trial_period_days": null,
+            "usage_type": "licensed"
           },
           "quantity": 1,
-          "start": 1521126084,
+          "start": 1522622399,
           "status": "active",
           "tax_percent": null,
           "trial_end": null,
           "trial_start": null
         }
     http_version: 
-  recorded_at: Thu, 15 Mar 2018 15:01:25 GMT
+  recorded_at: Sun, 01 Apr 2018 22:40:00 GMT
 recorded_with: VCR 4.0.0
