--- a/spec/vcr_cassettes/StripeCharge/failure/handles_failure.yml
+++ b/spec/vcr_cassettes/StripeCharge/failure/handles_failure.yml
@@ -8,13 +8,13 @@ http_interactions:
       string: card[number]=4000000000000002&card[exp_month]=12&card[exp_year]=2019&card[cvc]=123
     headers:
       User-Agent:
-      - Stripe/v1 RubyBindings/3.9.2
+      - Stripe/v1 RubyBindings/3.11.0
       Authorization:
       - Bearer sk_test_JYrSngeaB6dFnfYWEII1vZaD
       Content-Type:
       - application/x-www-form-urlencoded
       X-Stripe-Client-User-Agent:
-      - '{"bindings_version":"3.9.2","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
+      - '{"bindings_version":"3.11.0","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
         MacBook-Pro-Alexander.local 17.4.0 Darwin Kernel Version 17.4.0: Sun Dec 17
         09:19:54 PST 2017; root:xnu-4570.41.2~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
       Accept-Encoding:
@@ -29,11 +29,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Thu, 15 Mar 2018 15:01:14 GMT
+      - Sun, 01 Apr 2018 22:41:15 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '780'
+      - '779'
       Connection:
       - keep-alive
       Access-Control-Allow-Credentials:
@@ -49,7 +49,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_UZ0eQQo7ttsDPo
+      - req_l7iU8xvE6UsnKn
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -58,10 +58,10 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "tok_1C5xZuG9Bw4keQMbnJUS6eQL",
+          "id": "tok_1CCErOG9Bw4keQMbs9sy1556",
           "object": "token",
           "card": {
-            "id": "card_1C5xZuG9Bw4keQMbOqW6Egay",
+            "id": "card_1CCErOG9Bw4keQMbv3rnl3gt",
             "object": "card",
             "address_city": null,
             "address_country": null,
@@ -84,33 +84,33 @@ http_interactions:
             "name": null,
             "tokenization_method": null
           },
-          "client_ip": "31.31.107.53",
-          "created": 1521126074,
+          "client_ip": "31.31.103.7",
+          "created": 1522622474,
           "livemode": false,
           "type": "card",
           "used": false
         }
     http_version: 
-  recorded_at: Thu, 15 Mar 2018 15:01:14 GMT
+  recorded_at: Sun, 01 Apr 2018 22:41:15 GMT
 - request:
     method: post
     uri: https://api.stripe.com/v1/charges
     body:
       encoding: UTF-8
-      string: amount=3000&currency=usd&source=tok_1C5xZuG9Bw4keQMbnJUS6eQL&description=&metadata[reference]=6d76741ebc19f2141a23
+      string: amount=3000&currency=usd&source=tok_1CCErOG9Bw4keQMbs9sy1556&description=&metadata[reference]=fea1ce165974c43cec43
     headers:
       User-Agent:
-      - Stripe/v1 RubyBindings/3.9.2
+      - Stripe/v1 RubyBindings/3.11.0
       Authorization:
       - Bearer sk_test_JYrSngeaB6dFnfYWEII1vZaD
       Content-Type:
       - application/x-www-form-urlencoded
       X-Stripe-Client-User-Agent:
-      - '{"bindings_version":"3.9.2","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
+      - '{"bindings_version":"3.11.0","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
         MacBook-Pro-Alexander.local 17.4.0 Darwin Kernel Version 17.4.0: Sun Dec 17
         09:19:54 PST 2017; root:xnu-4570.41.2~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
       Idempotency-Key:
-      - 6d76741ebc19f2141a23
+      - fea1ce165974c43cec43
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
@@ -123,7 +123,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Thu, 15 Mar 2018 15:01:18 GMT
+      - Sun, 01 Apr 2018 22:41:16 GMT
       Content-Type:
       - application/json
       Content-Length:
@@ -143,11 +143,11 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Idempotency-Key:
-      - 6d76741ebc19f2141a23
+      - fea1ce165974c43cec43
       Original-Request:
-      - req_F3wTqm7RwDgzI6
+      - req_r850bEj0rrNdwz
       Request-Id:
-      - req_F3wTqm7RwDgzI6
+      - req_r850bEj0rrNdwz
       Stripe-Version:
       - '2018-02-06'
     body:
@@ -159,9 +159,9 @@ http_interactions:
             "type": "card_error",
             "code": "card_declined",
             "decline_code": "generic_decline",
-            "charge": "ch_1C5xZyG9Bw4keQMbB9nrUj1e"
+            "charge": "ch_1CCErQG9Bw4keQMbHqfUmWHY"
           }
         }
     http_version: 
-  recorded_at: Thu, 15 Mar 2018 15:01:19 GMT
+  recorded_at: Sun, 01 Apr 2018 22:41:16 GMT
 recorded_with: VCR 4.0.0
