--- a/spec/vcr_cassettes/User_purchases_a_subscription_plan/via_stripe.yml
+++ b/spec/vcr_cassettes/User_purchases_a_subscription_plan/via_stripe.yml
@@ -8,13 +8,13 @@ http_interactions:
       string: card[number]=4242424242424242&card[exp_month]=12&card[exp_year]=2019&card[cvc]=123
     headers:
       User-Agent:
-      - Stripe/v1 RubyBindings/3.9.2
+      - Stripe/v1 RubyBindings/3.11.0
       Authorization:
       - Bearer sk_test_JYrSngeaB6dFnfYWEII1vZaD
       Content-Type:
       - application/x-www-form-urlencoded
       X-Stripe-Client-User-Agent:
-      - '{"bindings_version":"3.9.2","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
+      - '{"bindings_version":"3.11.0","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
         MacBook-Pro-Alexander.local 17.4.0 Darwin Kernel Version 17.4.0: Sun Dec 17
         09:19:54 PST 2017; root:xnu-4570.41.2~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
       Accept-Encoding:
@@ -29,11 +29,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Thu, 15 Mar 2018 15:02:01 GMT
+      - Sun, 01 Apr 2018 22:40:56 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '780'
+      - '779'
       Connection:
       - keep-alive
       Access-Control-Allow-Credentials:
@@ -49,7 +49,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_bAT43XggoqFftx
+      - req_Hmsjf2CJvCvo3F
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -58,10 +58,10 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "tok_1C5xafG9Bw4keQMblnbkFO4m",
+          "id": "tok_1CCEr6G9Bw4keQMbxVoYxNub",
           "object": "token",
           "card": {
-            "id": "card_1C5xafG9Bw4keQMbC33m6jRJ",
+            "id": "card_1CCEr6G9Bw4keQMbHea21S8s",
             "object": "card",
             "address_city": null,
             "address_country": null,
@@ -84,14 +84,14 @@ http_interactions:
             "name": null,
             "tokenization_method": null
           },
-          "client_ip": "31.31.107.53",
-          "created": 1521126121,
+          "client_ip": "31.31.103.7",
+          "created": 1522622456,
           "livemode": false,
           "type": "card",
           "used": false
         }
     http_version: 
-  recorded_at: Thu, 15 Mar 2018 15:02:01 GMT
+  recorded_at: Sun, 01 Apr 2018 22:40:56 GMT
 - request:
     method: post
     uri: https://api.stripe.com/v1/customers
@@ -100,13 +100,13 @@ http_interactions:
       string: email=test%40example.com
     headers:
       User-Agent:
-      - Stripe/v1 RubyBindings/3.9.2
+      - Stripe/v1 RubyBindings/3.11.0
       Authorization:
       - Bearer sk_test_JYrSngeaB6dFnfYWEII1vZaD
       Content-Type:
       - application/x-www-form-urlencoded
       X-Stripe-Client-User-Agent:
-      - '{"bindings_version":"3.9.2","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
+      - '{"bindings_version":"3.11.0","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
         MacBook-Pro-Alexander.local 17.4.0 Darwin Kernel Version 17.4.0: Sun Dec 17
         09:19:54 PST 2017; root:xnu-4570.41.2~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
       Accept-Encoding:
@@ -121,7 +121,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Thu, 15 Mar 2018 15:02:02 GMT
+      - Sun, 01 Apr 2018 22:40:58 GMT
       Content-Type:
       - application/json
       Content-Length:
@@ -141,7 +141,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_IGbjgW8DLTc15z
+      - req_8G1uiTa5ykLIxJ
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -150,17 +150,17 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "cus_CUxV4ylH63xysh",
+          "id": "cus_CbRkqiJXMsNTeV",
           "object": "customer",
           "account_balance": 0,
-          "created": 1521126122,
+          "created": 1522622458,
           "currency": null,
           "default_source": null,
           "delinquent": false,
           "description": null,
           "discount": null,
           "email": "test@example.com",
-          "invoice_prefix": "F688307",
+          "invoice_prefix": "C44A875",
           "livemode": false,
           "metadata": {},
           "shipping": null,
@@ -169,33 +169,33 @@ http_interactions:
             "data": [],
             "has_more": false,
             "total_count": 0,
-            "url": "/v1/customers/cus_CUxV4ylH63xysh/sources"
+            "url": "/v1/customers/cus_CbRkqiJXMsNTeV/sources"
           },
           "subscriptions": {
             "object": "list",
             "data": [],
             "has_more": false,
             "total_count": 0,
-            "url": "/v1/customers/cus_CUxV4ylH63xysh/subscriptions"
+            "url": "/v1/customers/cus_CbRkqiJXMsNTeV/subscriptions"
           }
         }
     http_version: 
-  recorded_at: Thu, 15 Mar 2018 15:02:02 GMT
+  recorded_at: Sun, 01 Apr 2018 22:40:58 GMT
 - request:
     method: post
-    uri: https://api.stripe.com/v1/customers/cus_CUxV4ylH63xysh
+    uri: https://api.stripe.com/v1/customers/cus_CbRkqiJXMsNTeV
     body:
       encoding: UTF-8
-      string: source=tok_1C5xafG9Bw4keQMblnbkFO4m
+      string: source=tok_1CCEr6G9Bw4keQMbxVoYxNub
     headers:
       User-Agent:
-      - Stripe/v1 RubyBindings/3.9.2
+      - Stripe/v1 RubyBindings/3.11.0
       Authorization:
       - Bearer sk_test_JYrSngeaB6dFnfYWEII1vZaD
       Content-Type:
       - application/x-www-form-urlencoded
       X-Stripe-Client-User-Agent:
-      - '{"bindings_version":"3.9.2","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
+      - '{"bindings_version":"3.11.0","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
         MacBook-Pro-Alexander.local 17.4.0 Darwin Kernel Version 17.4.0: Sun Dec 17
         09:19:54 PST 2017; root:xnu-4570.41.2~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
       Accept-Encoding:
@@ -210,7 +210,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Thu, 15 Mar 2018 15:02:03 GMT
+      - Sun, 01 Apr 2018 22:41:00 GMT
       Content-Type:
       - application/json
       Content-Length:
@@ -230,7 +230,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_I6Zh80LJswrQP9
+      - req_BiUxWcq1wmo9rn
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -239,17 +239,17 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "cus_CUxV4ylH63xysh",
+          "id": "cus_CbRkqiJXMsNTeV",
           "object": "customer",
           "account_balance": 0,
-          "created": 1521126122,
+          "created": 1522622458,
           "currency": null,
-          "default_source": "card_1C5xafG9Bw4keQMbC33m6jRJ",
+          "default_source": "card_1CCEr6G9Bw4keQMbHea21S8s",
           "delinquent": false,
           "description": null,
           "discount": null,
           "email": "test@example.com",
-          "invoice_prefix": "F688307",
+          "invoice_prefix": "C44A875",
           "livemode": false,
           "metadata": {},
           "shipping": null,
@@ -257,7 +257,7 @@ http_interactions:
             "object": "list",
             "data": [
               {
-                "id": "card_1C5xafG9Bw4keQMbC33m6jRJ",
+                "id": "card_1CCEr6G9Bw4keQMbHea21S8s",
                 "object": "card",
                 "address_city": null,
                 "address_country": null,
@@ -269,7 +269,7 @@ http_interactions:
                 "address_zip_check": null,
                 "brand": "Visa",
                 "country": "US",
-                "customer": "cus_CUxV4ylH63xysh",
+                "customer": "cus_CbRkqiJXMsNTeV",
                 "cvc_check": "pass",
                 "dynamic_last4": null,
                 "exp_month": 12,
@@ -284,33 +284,33 @@ http_interactions:
             ],
             "has_more": false,
             "total_count": 1,
-            "url": "/v1/customers/cus_CUxV4ylH63xysh/sources"
+            "url": "/v1/customers/cus_CbRkqiJXMsNTeV/sources"
           },
           "subscriptions": {
             "object": "list",
             "data": [],
             "has_more": false,
             "total_count": 0,
-            "url": "/v1/customers/cus_CUxV4ylH63xysh/subscriptions"
+            "url": "/v1/customers/cus_CbRkqiJXMsNTeV/subscriptions"
           }
         }
     http_version: 
-  recorded_at: Thu, 15 Mar 2018 15:02:03 GMT
+  recorded_at: Sun, 01 Apr 2018 22:41:00 GMT
 - request:
     method: post
-    uri: https://api.stripe.com/v1/customers/cus_CUxV4ylH63xysh/subscriptions
+    uri: https://api.stripe.com/v1/customers/cus_CbRkqiJXMsNTeV/subscriptions
     body:
       encoding: UTF-8
       string: plan=orchestra_monthly
     headers:
       User-Agent:
-      - Stripe/v1 RubyBindings/3.9.2
+      - Stripe/v1 RubyBindings/3.11.0
       Authorization:
       - Bearer sk_test_JYrSngeaB6dFnfYWEII1vZaD
       Content-Type:
       - application/x-www-form-urlencoded
       X-Stripe-Client-User-Agent:
-      - '{"bindings_version":"3.9.2","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
+      - '{"bindings_version":"3.11.0","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
         MacBook-Pro-Alexander.local 17.4.0 Darwin Kernel Version 17.4.0: Sun Dec 17
         09:19:54 PST 2017; root:xnu-4570.41.2~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
       Accept-Encoding:
@@ -325,11 +325,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Thu, 15 Mar 2018 15:02:13 GMT
+      - Sun, 01 Apr 2018 22:41:03 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '1745'
+      - '2047'
       Connection:
       - keep-alive
       Access-Control-Allow-Credentials:
@@ -345,7 +345,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_cS7Y5loCUoIkNc
+      - req_Hl0sWu3AADekhO
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -354,17 +354,17 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "sub_CUxVyUdJCE9rAD",
+          "id": "sub_CbRkr5zXVSiBA5",
           "object": "subscription",
           "application_fee_percent": null,
           "billing": "charge_automatically",
-          "billing_cycle_anchor": 1521126131,
+          "billing_cycle_anchor": 1522622461,
           "cancel_at_period_end": false,
           "canceled_at": null,
-          "created": 1521126131,
-          "current_period_end": 1523804531,
-          "current_period_start": 1521126131,
-          "customer": "cus_CUxV4ylH63xysh",
+          "created": 1522622461,
+          "current_period_end": 1525214461,
+          "current_period_start": 1522622461,
+          "customer": "cus_CbRkqiJXMsNTeV",
           "days_until_due": null,
           "discount": null,
           "ended_at": null,
@@ -372,14 +372,15 @@ http_interactions:
             "object": "list",
             "data": [
               {
-                "id": "si_CUxVxYHtxtqMDC",
+                "id": "si_CbRk6Iv78joSOF",
                 "object": "subscription_item",
-                "created": 1521126132,
+                "created": 1522622462,
                 "metadata": {},
                 "plan": {
                   "id": "orchestra_monthly",
                   "object": "plan",
                   "amount": 10000,
+                  "billing_scheme": "per_unit",
                   "created": 1521125550,
                   "currency": "usd",
                   "interval": "month",
@@ -388,15 +389,19 @@ http_interactions:
                   "metadata": {},
                   "nickname": "Orchestra Monthly",
                   "product": "prod_CUxMHgqubz1jrn",
-                  "trial_period_days": null
+                  "tiers": null,
+                  "tiers_mode": null,
+                  "transform_usage": null,
+                  "trial_period_days": null,
+                  "usage_type": "licensed"
                 },
                 "quantity": 1,
-                "subscription": "sub_CUxVyUdJCE9rAD"
+                "subscription": "sub_CbRkr5zXVSiBA5"
               }
             ],
             "has_more": false,
             "total_count": 1,
-            "url": "/v1/subscription_items?subscription=sub_CUxVyUdJCE9rAD"
+            "url": "/v1/subscription_items?subscription=sub_CbRkr5zXVSiBA5"
           },
           "livemode": false,
           "metadata": {},
@@ -404,6 +409,7 @@ http_interactions:
             "id": "orchestra_monthly",
             "object": "plan",
             "amount": 10000,
+            "billing_scheme": "per_unit",
             "created": 1521125550,
             "currency": "usd",
             "interval": "month",
@@ -412,15 +418,19 @@ http_interactions:
             "metadata": {},
             "nickname": "Orchestra Monthly",
             "product": "prod_CUxMHgqubz1jrn",
-            "trial_period_days": null
+            "tiers": null,
+            "tiers_mode": null,
+            "transform_usage": null,
+            "trial_period_days": null,
+            "usage_type": "licensed"
           },
           "quantity": 1,
-          "start": 1521126131,
+          "start": 1522622461,
           "status": "active",
           "tax_percent": null,
           "trial_end": null,
           "trial_start": null
         }
     http_version: 
-  recorded_at: Thu, 15 Mar 2018 15:02:13 GMT
+  recorded_at: Sun, 01 Apr 2018 22:41:03 GMT
 recorded_with: VCR 4.0.0
