Expand administrative capabilities
- add the option for administrators to register purchases and made in
cash or by invoice, and arbitrarily reduce the price
- integrate PaperTrail to track changes in models
- create a Rake task that runs a consistency check on every Payment
- add two-factor authentication for administrators using Authy
- add the ability for administrative accounts to simulate a user
- prevent emails from going out to users in development and staging
environments

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -25,6 +25,7 @@ development: &default
   paypal_client_secret: <%= ENV["PAYPAL_CLIENT_SECRET"] %>
   host_name: "c5c88ef5.ngrok.io"
   rollbar_server_side_access_token: "d71384afb5e6466796261a57ca9603cc"
+  authy_key: <%= ENV["AUTHY_KEY"] %>
 
 test:
   <<: *default
